# trading-bot

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: launch.json
History/1919642146/: catalog.sqlite
History/1919642146/EURUSD_BBO/m1/: 2026_25-28.hst
History/2639658384/: catalog.sqlite
History/2639658384/EURUSD_Default/H1/: 2026.hst
History/2639658384/EURUSD_Default/m1/: 2024_25-28.hst  2024_29-32.hst  2024_33-36.hst  2024_37-40.hst  2024_41-44.hst  2024_45-48.hst  2024_49-52.hst  2025_1-4.hst  2025_13-16.hst  2025_17-20.hst  2025_21-24.hst  2025_25-28.hst  2025_29-32.hst  2025_33-36.hst  2025_37-40.hst  2025_41-44.hst  2025_45-48.hst  2025_49-52.hst  (+9 more)
data/: backtest_equity.csv  backtest_trades.csv
scripts/: check_connection.py  fix_forexconnect_macos.sh  optimize.py  run_backtest.py  subscribe_instrument.py
src/tradingbot/: backtest.py  broker.py  config.py  engine.py  mock.py  store.py  strategy.py
src/tradingbot/web/: app.py  backtest_job.py
tests/: test_backtest.py  test_engine_settings.py  test_strategy.py
web-ui/: next.config.mjs  package-lock.json  package.json
web-ui/History/2639658384/: catalog.sqlite
web-ui/app/: globals.css  layout.tsx  page.tsx
web-ui/app/activity/: page.tsx
web-ui/app/backtesting/: page.tsx
web-ui/app/history/: page.tsx
web-ui/app/settings/: page.tsx
web-ui/app/strategies/: page.tsx
web-ui/components/: AccountCard.tsx  LogsPanel.tsx  MetricRow.tsx  PositionsPanel.tsx  Shell.tsx  Sidebar.tsx  StrategyControls.tsx  Topbar.tsx  charts.tsx
web-ui/lib/: api.ts  format.ts  live.tsx  types.ts
(+3 files in other folders)
