[project]
name = "tradingbot"
version = "0.1.0"
description = "Bot de trading EUR/USD — Bandas de Bollinger 15m sobre FXCM (ForexConnect)"
requires-python = ">=3.10,<3.11"
dependencies = [
    "forexconnect==1.6.43",
    "numpy>=1.24,<2",
    "pandas>=2.0,<3",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = ["pytest>=8", "httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tradingbot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
